Block Style Updates
Fixed hero and event calendar classes showing in content
Fixed color layering and cascading

--- a/css/block/block-styles.css
+++ b/css/block/block-styles.css
@@ -54,68 +54,68 @@
   color: inherit;
 }
 
-.bs-background-white {
+.column .block.bs-background-white {
   background-color: var(--ucb-white);
   color: var(--ucb-black);
   padding: 20px;
 }
 
-.bs-background-gray {
+.column .block.bs-background-gray {
   background-color: var(--ucb-light-gray);
   color: var(--ucb-black);
   padding: 20px;
 }
 
-.bs-background-dark-gray {
+.column .block.bs-background-dark-gray {
   background-color: var(--ucb-dark-gray);
   color: var(--ucb-white);
   padding: 20px;
 }
 
-.bs-background-tan {
+.column .block.bs-background-tan {
   background-color: var(--ucb-light-gold);
   color: var(--ucb-black);
   padding: 20px;
 }
 
-.bs-background-light-blue {
+.column .block.bs-background-light-blue {
   background-color: var(--ucb-light-blue);
   color: var(--ucb-black);
   padding: 20px;
 }
 
-.bs-background-medium-blue {
+.column .block.bs-background-medium-blue {
   background-color: var(--ucb-medium-blue);
   color: var(--ucb-black);
   padding: 20px;
 }
 
-.bs-background-dark-blue {
+.column .block.bs-background-dark-blue {
   background-color: var(--ucb-dark-blue);
   color: var(--ucb-white);
   padding: 20px;
 }
 
-.bs-background-light-green {
+.column .block.bs-background-light-green {
   background-color: var(--ucb-light-green);
   color: var(--ucb-black);
   padding: 20px;
 }
 
-.bs-background-brick {
+.column .block.bs-background-brick {
   background-color: var(--ucb-brick);
   color: var(--ucb-white);
   padding: 20px;
 }
 
-.bs-background-outline {
+.column .block.bs-background-outline {
   background-color: transparent;
   color: inherit;
   padding: 20px;
   border: 1px solid rgba(200, 200, 200, 0.5);
 }
 
-.bs-background-underline {
+.column .block.bs-background-underline {
   background-color: transparent;
   color: inherit;
   border-bottom: 1px solid rgba(200, 200, 200, 0.5);
@@ -124,93 +124,95 @@
 
 /*** Link Color Settings ***/
 .text-block-none a,
-.bs-background-outline a,
-.bs-background-underline a {
+.column .block.bs-background-outline a,
+.column .block.bs-background-underline a {
   color: inherit;
 }
 
 .text-block-none a:hover,
-.bs-background-outline a:hover,
-.bs-background-underline a:hover {
+.column .block.bs-background-outline a:hover,
+.column .block.bs-background-underline a:hover {
   color: inherit;
 }
 
-.bs-background-white a {
+.column .block.bs-background-white a {
   color: var(--ucb-link);
 }
 
-.bs-background-white a:hover {
+.column .block.bs-background-white a:hover {
   color: var(--ucb-link-visited);
 }
 
-.bs-background-gray a {
+.column .block.bs-background-gray a {
   color: var(--ucb-link-dark);
 }
 
-.bs-background-gray a:hover {
+.column .block.bs-background-gray a:hover {
   color: var(--ucb-link-visited);
 }
 
-.bs-background-dark-gray a {
+.column .block.bs-background-dark-gray a {
   color: var(--ucb-gold);
 }
 
-.bs-background-dark-gray a:hover {
+.column .block.bs-background-dark-gray a:hover {
   color: var(--ucb-white);
 }
 
-.bs-background-tan a {
+.column .block.bs-background-tan a {
   color: var(--ucb-link-dark);
 }
 
-.bs-background-tan a:hover {
+.column .block.bs-background-tan a:hover {
   color: var(--ucb-link-visited);
 }
 
-.bs-background-light-blue a {
+.column .block.bs-background-light-blue a {
   color: var(--ucb-link-dark);
 }
 
-.bs-background-light-blue a:hover {
+.column .block.bs-background-light-blue a:hover {
   color: var(--ucb-link-visited);
 }
 
-.bs-background-medium-blue a {
+.column .block.bs-background-medium-blue a {
   color: var(--ucb-black);
   text-decoration: underline;
 }
 
-.bs-background-medium-blue a:hover {
+.column .block.bs-background-medium-blue a:hover {
   color: var(--ucb-black);
   text-decoration: underline;
 }
 
-.bs-background-dark-blue a {
+.column .block.bs-background-dark-blue a {
   color: var(--ucb-white);
   text-decoration: underline;
 }
 
-.bs-background-dark-blue a:hover {
+.column .block.bs-background-dark-blue a:hover {
   color: var(--ucb-white);
   text-decoration: underline;
 }
 
-.bs-background-light-green a {
+.column .block.bs-background-light-green a {
   color: var(--ucb-link-dark);
 }
 
-.bs-background-light-green a:hover {
+.column .block.bs-background-light-green a:hover {
   color: var(--ucb-link-visited);
 }
 
-.bs-background-brick a {
+.column .block.bs-background-brick a {
   color: var(--ucb-white);
   text-decoration: underline;
+  text-decoration-color: rgba(221, 221, 221, 0.65);
 }
 
-.bs-background-brick a:hover {
+.column .block.bs-background-brick a:hover {
   color: var(--ucb-white);
   text-decoration: underline;
+  text-decoration-color: rgba(221, 221, 221, 0.65);
 }
 
 /*** Icon Styles ***/
