--- a/css/block/hero-unit.css
+++ b/css/block/hero-unit.css
@@ -3,8 +3,6 @@
  *
  */
 
-
-
  .ucb-hero-unit-links .button:first-of-type{
   margin-right: 5px !important;
   margin-left: 0px !important;
@@ -33,6 +31,7 @@
   margin-bottom: 0;
   padding-top: 0;
   padding-bottom: 0;
+  width: 100%;
 }
 
 .block-hero-unit.size-large .ucb-hero-unit-content {
