--- a/templates/field/field--field-bs-background-style.html.twig
+++ b/templates/field/field--field-bs-background-style.html.twig
@@ -23,7 +23,7 @@
 	{% elseif item|render|striptags|trim == 'Underline' %}
 		{% set blockBackground = 'bs-background-underline' %}
 	{% else %}
-		{% set blockBackground = 'text-block-none' %}
+		{% set blockBackground = 'bs-background-none' %}
 	{% endif %}
 
 	{{ blockBackground }}
