--- a/css/layout-builder-styles.css
+++ b/css/layout-builder-styles.css
@@ -75,6 +75,7 @@
 
 .ucb-bootstrap-layout__background-color--black {
   background-color: var(--ucb-black);
+  color: var(--ucb-white);
 }
 
 .ucb-bootstrap-layout__background-color--tan {
