--- a/css/block/expandable-content.css
+++ b/css/block/expandable-content.css
@@ -127,7 +127,8 @@
 .ucb-bootstrap-layout__background-color--light-gray .ucb-expandable-content .accordion-item,
 .ucb-bootstrap-layout__background-color--tan .ucb-expandable-content .accordion-item,
 .ucb-bootstrap-layout__background-color--light-blue .ucb-expandable-content .accordion-item,
-.ucb-bootstrap-layout__background-color--light-green .ucb-expandable-content .accordion-item {
+.ucb-bootstrap-layout__background-color--light-green .ucb-expandable-content .accordion-item,
+.content-frame-light-gray .ucb-expandable-content .accordion-item {
   color: inherit;
   background-color: inherit;
   border-bottom: 1px solid rgba(128, 128, 128, 33%);
@@ -139,7 +140,8 @@
 .ucb-bootstrap-layout__background-color--black .ucb-expandable-content .accordion-item,
 .ucb-bootstrap-layout__background-color--medium-blue .ucb-expandable-content .accordion-item,
 .ucb-bootstrap-layout__background-color--dark-blue .ucb-expandable-content .accordion-item,
-.ucb-bootstrap-layout__background-color--brick .ucb-expandable-content .accordion-item {
+.ucb-bootstrap-layout__background-color--brick .ucb-expandable-content .accordion-item,
+.content-frame-dark-gray .ucb-expandable-content .accordion-item {
   color: inherit;
   background-color: inherit;
   border-bottom: 1px solid rgb(255 255 255 / 58%)
@@ -164,13 +166,53 @@
   border-bottom: 1px solid rgb(255 255 255 / 58%)
 }
 
-.column .block.bs-background-none.ucb-expandable-content .accordion-item,
-.column .block.bs-background-outline.ucb-expandable-content .accordion-item,
-.column .block.bs-background-underline.ucb-expandable-content .accordion-item {
+.ucb-bootstrap-layout__background-color--light-gray .block.bs-background-none.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--light-gray .block.bs-background-none.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--tan .block.bs-background-none.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--light-blue .block.bs-background-none.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--light-green .block.bs-background-none.ucb-expandable-content .accordion-item,
+.content-frame-light-gray .block.bs-background-none.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--light-gray .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--light-gray .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--tan .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--light-blue .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--light-green .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.content-frame-light-gray .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--light-gray .block.bs-background-underline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--light-gray .block.bs-background-underline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--tan .block.bs-background-underline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--light-blue .block.bs-background-underline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--light-green .block.bs-background-underline.ucb-expandable-content .accordion-item,
+.content-frame-light-gray .block.bs-background-underline.ucb-expandable-content .accordion-item {
   color: inherit;
   background-color: inherit;
-  border-bottom: 1px solid;
-  border-color: inherit;
+  border-bottom: 1px solid rgba(128, 128, 128, 33%);
+}
+
+.ucb-bootstrap-layout__background-color--gold .block.bs-background-none.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--dark-gray .block.bs-background-none.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--black .block.bs-background-none.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--medium-blue .block.bs-background-none.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--dark-blue .block.bs-background-none.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--brick .block.bs-background-none.ucb-expandable-content .accordion-item,
+.content-frame-dark-gray .block.bs-background-none.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--gold .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--dark-gray .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--black .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--medium-blue .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--dark-blue .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--brick .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.content-frame-dark-gray .block.bs-background-outline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--gold .block.bs-background-underline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--dark-gray .block.bs-background-underline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--black .block.bs-background-underline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--medium-blue .block.bs-background-underline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--dark-blue .block.bs-background-underline.ucb-expandable-content .accordion-item,
+.ucb-bootstrap-layout__background-color--brick .block.bs-background-underline.ucb-expandable-content .accordion-item,
+.content-frame-dark-gray .block.bs-background-underline.ucb-expandable-content .accordion-item {
+  color: inherit;
+  background-color: inherit;
+  border-bottom: 1px solid rgb(255 255 255 / 58%)
 }
 
 
