--- a/css/block/events-calendar.css
+++ b/css/block/events-calendar.css
@@ -69,6 +69,10 @@
   color: inherit;
 }
 
+.localist_widget_container div.lw_event_item_title {
+  color: inherit;
+}
+
 .ucb-events-calendar .le-wrapper {
   border-bottom-color: rgba(117, 117, 117, 0.35);
 }
@@ -279,23 +283,18 @@ table.localist_minicalendar_minicalendar caption {
   text-align: center;
 }
 
-.ucb-calendar-button{
+.ucb-calendar-block-link-container a.ucb-calendar-button{
   display: inline-block;
   padding: 5px 10px;
   font-weight: bold;
   font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
   margin-bottom: 5px;
   background-clip: padding-box;
-  color: #0277BD !important;
-  border: 1px solid #0277BD;
+  color: inherit;
+  border: 1px solid currentColor;
+  text-decoration: none;
   border-radius: 0px;
   background-color: transparent;
-}
-
-.ucb-calendar-button:hover{
-  transition: background-color 0.25s ease, border-color 0.25s ease, color 0.25s ease;
-  background-color: #0277BD;
-  color: white !important;
 }
 
 /* Section Background Color Overrides for Dark Backgrounds */
