--- a/css/block/ucb-article-feature-block.css
+++ b/css/block/ucb-article-feature-block.css
@@ -9,16 +9,11 @@
     font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
     margin-bottom: 5px;
     background-clip: padding-box;
-    color: #0277BD !important;
-    border: 1px solid #0277BD;
+    color: inherit;
+    border: 1px solid currentColor;
+    text-decoration: none;
     border-radius: 0px;
     background-color: transparent;
-}
-
-.ucb-article-feature-block-button:hover{
-    transition: background-color 0.25s ease, border-color 0.25s ease, color 0.25s ease;
-    background-color: #0277BD;
-    color: white !important;
 }
 
 .ucb-article-img-link {
