--- a/css/block/ucb-article-grid-block.css
+++ b/css/block/ucb-article-grid-block.css
@@ -1,33 +1,36 @@
-.ucb-article-grid-block-button-container{
-    text-align: center;
+.ucb-article-grid-block-button-container {
+  text-align: center;
 }
 
-.ucb-article-grid-block-button-container a.ucb-article-grid-block-button{
-    display: inline-block;
-    padding: 5px 10px;
-    font-weight: bold;
-    font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
-    margin-bottom: 5px;
-    background-clip: padding-box;
-    color: inherit;
-    border: 1px solid currentColor;
-    text-decoration: none;
-    border-radius: 0px;
-    background-color: transparent;
+.ucb-article-grid-block-button-container a.ucb-article-grid-block-button {
+  display: inline-block;
+  padding: 5px 10px;
+  font-weight: bold;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-bottom: 5px;
+  background-clip: padding-box;
+  color: inherit;
+  border: 1px solid currentColor;
+  text-decoration: none;
+  border-radius: 0px;
+  background-color: transparent;
+}
+
+.ucb-article-grid-block-button-container a.ucb-article-grid-block-button:hover {
+  text-decoration: none;
 }
 
 .ucb-article-grid-header-link h3 {
-    margin: 5px 0;
-    padding: 0;
-    font-size: 100%;
+  margin: 5px 0;
+  padding: 0;
+  font-size: 100%;
 }
 
-.ucb-article-grid-summary{
-    font-size: 85%;
+.ucb-article-grid-summary {
+  font-size: 85%;
 }
 
-.ucb-article-grid-card-img{
-    object-fit: cover !important;
-    aspect-ratio: 2/1;
+.ucb-article-grid-card-img {
+  object-fit: cover !important;
+  aspect-ratio: 2/1;
 }
-
