--- a/css/ucb-category-cloud.css
+++ b/css/ucb-category-cloud.css
@@ -1,24 +1,27 @@
-.ucb-category-cloud-link{
-    font-size: 85%;
-    padding: 1px 6px;
-    background-clip: padding-box;
-    color: inherit;
-    border: 1px solid currentColor;
-    text-decoration: none;
-    border-radius: 0px;
-    background-color: transparent;
-    font-weight: bold;
-    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    margin-bottom: 5px;
-    display: inline-block;
-    margin: 5px;
+.ucb-category-cloud-container a.ucb-category-cloud-link {
+  font-size: 85%;
+  padding: 1px 6px;
+  background-clip: padding-box;
+  color: inherit;
+  border: 1px solid currentColor;
+  text-decoration: none;
+  border-radius: 0px;
+  background-color: transparent;
+  font-weight: bold;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-bottom: 5px;
+  display: inline-block;
+  margin: 5px;
 }
 
-.ucb-category-cloud-link:first-child{
-    margin-left: 0;
+.ucb-category-cloud-container a.ucb-category-cloud-link:hover {
+  text-decoration: none;
 }
 
+.ucb-category-cloud-link:first-child {
+  margin-left: 0;
+}
 
-.ucb-category-cloud-container{
-    padding-bottom: 20px;
+.ucb-category-cloud-container {
+  padding-bottom: 20px;
 }
