--- a/css/ucb-tag-cloud.css
+++ b/css/ucb-tag-cloud.css
@@ -14,7 +14,7 @@
   margin: 5px;
 }
 
-.ucb-tag-cloud-container a.ucb-category-cloud-link:hover {
+.ucb-tag-cloud-container a.ucb-tag-cloud-link:hover {
   text-decoration: none;
 }
 
