--- a/css/layout-builder-styles.css
+++ b/css/layout-builder-styles.css
@@ -250,6 +250,11 @@
 }
 
 /*** Content Frame ***/
+.content-frame-dark-gray,
+.content-frame-light-gray {
+  margin: 0;
+}
+
 .content-frame-light-gray .column {
   background: rgba(255, 255, 255, 0.85);
   color: var(--ucb-black);
@@ -321,7 +326,6 @@
   z-index: -1;
 }
 
-
 /*** Admin Editor Styles ***/
 .contextual-region .contextual .contextual-links a {
   color: #333 !important;
@@ -330,5 +334,5 @@
 [data-layout-content-preview-placeholder-label*="Links"],
 [data-layout-content-preview-placeholder-label*="Title"],
 [data-layout-content-preview-placeholder-label*="Body"] {
-    background-color: transparent;
+  background-color: transparent;
 }
