--- a/css/layout-builder-styles.css
+++ b/css/layout-builder-styles.css
@@ -233,13 +233,13 @@
 
 .ucb-boostrap-layout-section .column .block {
   padding-bottom: 1em;
-  margin-bottom: 40px;
+  margin-bottom: 1.5rem;
 }
 
 .ucb-boostrap-layout-section .column .block:first-child {
   padding-top: 1em;
   padding-bottom: 1em;
-  margin-top: 40px;
+  margin-top: 1.5rem;
 }
 
 /*** Content Frame ***/
