item render fix
Needed to add `.content` to the item renders otherwise we get hit with lots of php errors because the attributes are trying to render for each item.

--- a/templates/field/field--field-bs-background-style.html.twig
+++ b/templates/field/field--field-bs-background-style.html.twig
@@ -1,26 +1,26 @@
 {% for item in items %}
 
-	{% if item|render|striptags|trim == 'White' %}
+	{% if item.content|render|striptags|trim == 'White' %}
 		{% set blockBackground = 'bs-background-white' %}
-	{% elseif item|render|striptags|trim == 'Gray' %}
+	{% elseif item.content|render|striptags|trim == 'Gray' %}
 		{% set blockBackground = 'bs-background-gray' %}
-	{% elseif item|render|striptags|trim == 'Dark Gray' %}
+	{% elseif item.content|render|striptags|trim == 'Dark Gray' %}
 		{% set blockBackground = 'bs-background-dark-gray' %}
-	{% elseif item|render|striptags|trim == 'Tan' %}
+	{% elseif item.content|render|striptags|trim == 'Tan' %}
 		{% set blockBackground = 'bs-background-tan' %}
-	{% elseif item|render|striptags|trim == 'Light Blue' %}
+	{% elseif item.content|render|striptags|trim == 'Light Blue' %}
 		{% set blockBackground = 'bs-background-light-blue' %}
-	{% elseif item|render|striptags|trim == 'Medium Blue' %}
+	{% elseif item.content|render|striptags|trim == 'Medium Blue' %}
 		{% set blockBackground = 'bs-background-medium-blue' %}
-	{% elseif item|render|striptags|trim == 'Dark Blue' %}
+	{% elseif item.content|render|striptags|trim == 'Dark Blue' %}
 		{% set blockBackground = 'bs-background-dark-blue' %}
-	{% elseif item|render|striptags|trim == 'Light Green' %}
+	{% elseif item.content|render|striptags|trim == 'Light Green' %}
 		{% set blockBackground = 'bs-background-light-green' %}
-	{% elseif item|render|striptags|trim == 'Brick' %}
+	{% elseif item.content|render|striptags|trim == 'Brick' %}
 		{% set blockBackground = 'bs-background-brick' %}
-	{% elseif item|render|striptags|trim == 'Outline' %}
+	{% elseif item.content|render|striptags|trim == 'Outline' %}
 		{% set blockBackground = 'bs-background-outline' %}
-	{% elseif item|render|striptags|trim == 'Underline' %}
+	{% elseif item.content|render|striptags|trim == 'Underline' %}
 		{% set blockBackground = 'bs-background-underline' %}
 	{% else %}
 		{% set blockBackground = 'bs-background-none' %}
