--- a/templates/field/field--field-bs-icon-color.html.twig
+++ b/templates/field/field--field-bs-icon-color.html.twig
@@ -1,19 +1,19 @@
 {% for item in items %}
-	{% if item|render|striptags|trim == 'Gray' %}
+	{% if item.content|render|striptags|trim == 'Gray' %}
 		{% set blockIconColor = 'bs-icon-color-gray' %}
-	{% elseif item|render|striptags|trim == 'Gold' %}
+	{% elseif item.content|render|striptags|trim == 'Gold' %}
 		{% set blockIconColor = 'bs-icon-color-gold' %}
-	{% elseif item|render|striptags|trim == 'Blue' %}
+	{% elseif item.content|render|striptags|trim == 'Blue' %}
 		{% set blockIconColor = 'bs-icon-color-blue' %}
-	{% elseif item|render|striptags|trim == 'Green' %}
+	{% elseif item.content|render|striptags|trim == 'Green' %}
 		{% set blockIconColor = 'bs-icon-color-green' %}
-	{% elseif item|render|striptags|trim == 'Orange' %}
+	{% elseif item.content|render|striptags|trim == 'Orange' %}
 		{% set blockIconColor = 'bs-icon-color-orange' %}
-	{% elseif item|render|striptags|trim == 'Purple' %}
+	{% elseif item.content|render|striptags|trim == 'Purple' %}
 		{% set blockIconColor = 'bs-icon-color-purple' %}
-	{% elseif item|render|striptags|trim == 'Red' %}
+	{% elseif item.content|render|striptags|trim == 'Red' %}
 		{% set blockIconColor = 'bs-icon-color-red' %}
-	{% elseif item|render|striptags|trim == 'Yellow' %}
+	{% elseif item.content|render|striptags|trim == 'Yellow' %}
 		{% set blockIconColor = 'bs-icon-color-yellow' %}
 	{% else %}
 		{% set blockIconColor = 'bs-icon-color-default' %}
