--- a/templates/field/field--field-bs-heading-style.html.twig
+++ b/templates/field/field--field-bs-heading-style.html.twig
@@ -1,12 +1,12 @@
 {% for item in items %}
 
-{% if item|render|striptags|trim == 'Hero' %}
+{% if item.content|render|striptags|trim == 'Hero' %}
 	{% set blockHeadingStyle = 'hero' %}
-{% elseif item|render|striptags|trim == 'Hero Bold' %}
+{% elseif item.content|render|striptags|trim == 'Hero Bold' %}
 	{% set blockHeadingStyle = 'hero strong' %}
-{% elseif item|render|striptags|trim == 'Supersize' %}
+{% elseif item.content|render|striptags|trim == 'Supersize' %}
 	{% set blockHeadingStyle = 'supersize' %}
-{% elseif item|render|striptags|trim == 'Supersize Bold' %}
+{% elseif item.content|render|striptags|trim == 'Supersize Bold' %}
 	{% set blockHeadingStyle = 'supersize bold' %}
 {% else %}
 	{% set blockHeadingStyle = 'bs-heading-style-default' %}
