--- a/templates/field/field--field-bs-icon-position.html.twig
+++ b/templates/field/field--field-bs-icon-position.html.twig
@@ -1,8 +1,8 @@
 {% for item in items %}
 
-{% if item|render|striptags|trim == 'Offset' %}
+{% if item.content|render|striptags|trim == 'Offset' %}
 	{% set blockIconPosition = 'bs-icon-position-offset' %}
-{% elseif item|render|striptags|trim == 'Top' %}
+{% elseif item.content|render|striptags|trim == 'Top' %}
 	{% set blockIconPosition = 'bs-icon-position-top' %}
 {% else %}
 	{% set blockIconPosition = 'bs-icon-position-default' %}
