--- a/templates/field/field--field-bs-title-font-scale.html.twig
+++ b/templates/field/field--field-bs-title-font-scale.html.twig
@@ -1,8 +1,8 @@
 {% for item in items %}
 
-{% if item|render|striptags|trim == 'Increase' %}
+{% if item.content|render|striptags|trim == 'Increase' %}
 	{% set blockTitleScale = 'bs-title-scale-increase' %}
-{% elseif item|render|striptags|trim == 'Decrease' %}
+{% elseif item.content|render|striptags|trim == 'Decrease' %}
 	{% set blockTitleScale = 'bs-title-scale-decrease' %}
 {% else %}
 	{% set blockTitleScale = 'bs-title-scale-default' %}
