--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -208,6 +208,27 @@ td>h3>a{
     color: #0277BD;
 }
 
+.ucb-article-categories{
+    padding: 0;
+}
+
+.ucb-article-categories .ucb-article-category-icon{
+    display: none;
+}
+
+.ucb-article-categories a{
+    color: #666;
+    background-color: #e7e7e7;
+    padding: 3px;
+    line-height: 100%;
+    margin: 0 5px 5px 0;
+    font-weight: 600;
+    text-decoration: none;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 75%;
+}
+
 
 @media only screen and (max-width: 500px) {
   .promo-block-row {
