--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -132,7 +132,7 @@
 							<tbody>
 								<tr class="email-feature-art-row"style="border-bottom: solid rgba(128, 128, 128, 0.333);">
 									{# Image #}
-									<td valign="top" width="100px" height="100px" style="text-align: left; padding-right:10px; padding-left:10px">
+									<td valign="top" width="27%"style="text-align: left; padding-right:10px; padding-left:10px">
 											{# Code to render selected article content (thumbnail) #}
 											{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
 												<img
@@ -153,7 +153,7 @@
 											{% endif %}
 									</td>
 									{# Header, Summary, Cats #}
-									<td>
+									<td width="72%">
 										<table role="presentation">
 											<tbody>
 												{# Header #}
