Updates SCSS files

--- a/scss/styleguide/components/_content.scss
+++ b/scss/styleguide/components/_content.scss
@@ -1,6 +1,6 @@
-@import "modules/global";
-@import "modules/colors";
-@import "modules/functions";
+@import "../modules/global";
+@import "../modules/colors";
+@import "../modules/functions";
 
 /**
  * Content styles
