--- a/scss/styleguide/components/_express.scss
+++ b/scss/styleguide/components/_express.scss
@@ -1,3 +1,3 @@
-@import "modules/global";
-@import "modules/colors";
-@import "modules/functions";
+@import "../modules/global";
+@import "../modules/colors";
+@import "../modules/functions";
